# queue

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tcp_shmafka.cbp
src/: ArgsParser.cpp  ArgsParser.h  BufferPool.cpp  BufferPool.h  ConcurentQueue.h  DefinedMessages.cpp  DefinedMessages.h  WaitingStrategy.cpp  WaitingStrategy.h  main.cpp  server.cpp  server.h
src/Buff/: BufferPool.cpp  BufferPool.h  BuffersList.h  ListOfBufferLists.h  Log.h  SocketProtoBuffer.h  ThreadSafeBufferList.h  ThreadSafeListOfBuffersLists.h
src/Chain/: Chain.cpp  Chain.h
src/ChanelDb/: Chanel.cpp  Chanel.h  ChanelDb.cpp  ChanelDb.h  Channel.cpp  Channel.h  ChannelDb.cpp  ChannelDb.h
src/Client/: Client.cpp  Client.h
src/Configuration/: Config.cpp  Config.h  GlobalConfig.cpp  GlobalConfig.h  dictionary.cpp  iniparser.cpp
src/Logging/: TSLogger.cpp  TSLogger.h
src/Msg/: MsgBuilder.cpp  MsgBuilder.h  MsgConsts.h  MsgType.h
src/Processor/: MsgProcessor.cpp  MsgProcessor.h  MsgToEventProcessor.cpp  MsgToEventProcessor.h  ProceededEvent.cpp  ProceededEvent.h  ProceededMsg.cpp  ProceededMsg.h
src/Queue/: AsyncLimitedQueue.cpp  AsyncLimitedQueue.h  ConcurrentQueue.h  ConcurrentQueueSingleConsumer.h  IConcurrentQueue.h  QueueWaitingStrategy.h
src/Server/: TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  TcpServerConnection.cpp  TcpServerConnection.h  TcpServerIncomeMessage.h  TcpServerOutcomeMessage.h  server.cpp  server.h
src/Server/Epoll/: Client.h  EpollTcpServer.cpp  EpollTcpServer.h  IServer.h  MsgFromClient.h  MsgToClients.cpp  MsgToClients.h  SimpleMsgHeader.h  SimpleMsgListBuilder.cpp  SimpleMsgListBuilder.h  ThreadSafeUserDataMap.h  UserData.h
src/Test/: Client.h
src/Threads/: ServerThread.cpp  ServerThread.h  WorkerThread.cpp  WorkerThread.h
src/Worker/: Worker.cpp  Worker.h
